force-app/main/default/objects/SC_Custom_Lookup_Property__mdt/SC_Custom_Lookup_Property__mdt.object-meta.xml
<CustomObject>
    <description>Holds properties for each lookup type, which can be used to choose fields and objects, and also filter records</description>
    <label>Custom Lookup Property</label>
    <pluralLabel>Custom Lookup Properties</pluralLabel>
</CustomObject>