force-app/main/default/objects/SC_Custom_Lookup_Property__mdt/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>The conditions which should be used for filtering the records</description>
    <label>Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>