force-app/main/default/objects/SC_Custom_Lookup_Property__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Store the field which needs to be used as the label for the looked up results</description>
    <label>Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>