force-app/main/default/objects/SC_Custom_Lookup_Property__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Stores the name of the object which we use to query for the lookup</description>
    <label>Object</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>